# TMDB-movie-data-script

./: .gitignore  README.md  pyproject.toml  script.py
src/: combining.ipynb  request.ipynb  script.py
